# rag-foundry-universal

./: .dockerignore  .env.test  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  hello.py  pyproject.toml  pyrightconfig.json  pytest.ini  ruff.toml
artifacts/: cranestory.txt  under the dolomites.txt
docs-archive/: DECISIONS.md  MS1_VERIFICATION.md  PROJECT_PLAN.md  Rules-to-help-me-coding.md  TYPE_CHECKING.md  current_ingestion_data_model.md  ms2.md
gradio/: Dockerfile  pyproject.toml
ingestion_service/: .dockerignore  Dockerfile  pyproject.toml  pytest.ini
llm_service/: Dockerfile  pyproject.toml
llm_service/src/api/v1/: main.py  models.py  summarize.py
llm_service/src/core/: config.py  llm_client.py
llm_service/tests/api/: test_generate_endpoint.py  test_health_endpoint.py
llm_service/tests/core/: test_llm_client_http.py  test_llm_client_prompt.py  test_llm_client_provider.py
migrations/: env.py
rag_orchestrator/: Dockerfile  pyproject.toml
rag_orchestrator/src/api/v1/: main.py  models.py  routes.py
rag_orchestrator/src/core/: config.py  service.py  simple_service.py
rag_orchestrator/src/retrieval/: __init__.py  agent_adapter.py  agent_pipeline.py  codebase_queries.py  codebase_utils.py  community_detector.py  execute_plan.py  http_utils.py  summary_adapter.py  traversal_planner.py  traversal_selector.py  types.py  vector_store_protocol.py
rag_orchestrator/tests/__init__.py/: test_community_detector.py  test_traversal_planner.py
shared/: chunks.py
status/: Current_state.md  Current_status_20250107.md  Current_status_20250108.md  Current_status_20251218.md  Current_status_20251221.md  Current_status_20251229.md  Current_status_20260103.md  Current_status_20260110_v1.md  Status_20251220.md  current_status_20251230.md
vector_store_service/: .dockerignore  Dockerfile  pytest.ini
(+199 files in other folders)
