[project]
name = "llm-service"
version = "0.1.0"
description = "Connects to OpenAI or local LLMs like Ollama"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "httpx",
  "python-dotenv",
  "pydantic",
  "openai",         # for OpenAI LLMs
  "ollama"  ,        # optional, for local LLMs
  "python-multipart" # add this line
]

[tool.mypy]
explicit_package_bases = true
mypy_path = ["."]
ignore_missing_imports = true
exclude = [
    "^\\.venv/",
    "^venv/"
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
]
