[project]
name = "rag-orchestrator"
version = "0.1.0"
description = "Coordinates the full RAG pipeline (query, retrieve, generate)"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "httpx",
  "python-dotenv",
  "sentence-transformers",
  "openai",
  "pydantic-settings>=2.12.0",
  "requests>=2.32.5",
]
